# Autodialer

./: README.md
autodialer/: Dockerfile  Gemfile
autodialer/app/controllers/: pages_controller.rb
autodialer/app/services/: blog_service.rb  scraper_service.rb  vonage_service.rb
autodialer/app/views/layouts/: application.html.erb
autodialer/app/views/pages/: blogs.html.erb  home.html.erb  scrapper.html.erb
autodialer/config/: application.rb  credentials.yml.enc  private.key  routes.rb
autodialer/config/environments/: production.rb
autodialer/test/controllers/: pages_controller_test.rb
linkdine_scrapper/: .gitignore  app.py  linkedin_state.json  profile_url.txt  pyproject.toml  requirements.txt  scraper.py
